packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__025_cache_seeds_saliency.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 025_cache_seeds_saliency [cache_build]: Cache Build: seeds saliency"
expression: result
info:
  id: 025_cache_seeds_saliency
  name: "Cache Build: seeds saliency"
  category: cache_build
  description: cache_build scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/025_cache_seeds_saliency/scenario.toml
---
{
  "category": "cache_build",
  "files": [],
  "scenario_id": "025_cache_seeds_saliency",
  "status": "validated"
}
