packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__026_graph_nav_neighbors_related_metadata_and_toc.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 026_graph_nav_neighbors_related_metadata_and_toc [graph_navigation]: Graph Navigation: neighbors related metadata and toc"
expression: result
info:
  id: 026_graph_nav_neighbors_related_metadata_and_toc
  name: "Graph Navigation: neighbors related metadata and toc"
  category: graph_navigation
  description: graph_navigation scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/026_graph_nav_neighbors_related_metadata_and_toc/scenario.toml
---
{
  "category": "graph_navigation",
  "files": [],
  "scenario_id": "026_graph_nav_neighbors_related_metadata_and_toc",
  "status": "validated"
}
