packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__027_graph_nav_related_from_seeds_with_diagnostics.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 027_graph_nav_related_from_seeds_with_diagnostics [graph_navigation]: Graph Navigation: related from seeds with diagnostics"
expression: result
info:
  id: 027_graph_nav_related_from_seeds_with_diagnostics
  name: "Graph Navigation: related from seeds with diagnostics"
  category: graph_navigation
  description: graph_navigation scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/027_graph_nav_related_from_seeds_with_diagnostics/scenario.toml
---
{
  "category": "graph_navigation",
  "files": [],
  "scenario_id": "027_graph_nav_related_from_seeds_with_diagnostics",
  "status": "validated"
}
