packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__028_graph_nav_related_with_diagnostics.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 028_graph_nav_related_with_diagnostics [graph_navigation]: Graph Navigation: related with diagnostics"
expression: result
info:
  id: 028_graph_nav_related_with_diagnostics
  name: "Graph Navigation: related with diagnostics"
  category: graph_navigation
  description: graph_navigation scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/028_graph_nav_related_with_diagnostics/scenario.toml
---
{
  "category": "graph_navigation",
  "files": [],
  "scenario_id": "028_graph_nav_related_with_diagnostics",
  "status": "validated"
}
