packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__029_hybrid_quantum_anchor_batch.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 029_hybrid_quantum_anchor_batch [hybrid]: Hybrid: quantum anchor batch"
expression: result
info:
  id: 029_hybrid_quantum_anchor_batch
  name: "Hybrid: quantum anchor batch"
  category: hybrid
  description: Hybrid quantum fusion scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/029_hybrid_quantum_anchor_batch/scenario.toml
---
{
  "category": "hybrid",
  "files": [],
  "scenario_id": "029_hybrid_quantum_anchor_batch",
  "status": "validated"
}
