packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__030_hybrid_quantum_fusion.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 030_hybrid_quantum_fusion [hybrid]: Hybrid: quantum fusion"
expression: result
info:
  id: 030_hybrid_quantum_fusion
  name: "Hybrid: quantum fusion"
  category: hybrid
  description: Hybrid quantum fusion scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/030_hybrid_quantum_fusion/scenario.toml
---
{
  "category": "hybrid",
  "files": [],
  "scenario_id": "030_hybrid_quantum_fusion",
  "status": "validated"
}
