packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__031_hybrid_semantic_ignition.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 031_hybrid_semantic_ignition [hybrid]: Hybrid: semantic ignition"
expression: result
info:
  id: 031_hybrid_semantic_ignition
  name: "Hybrid: semantic ignition"
  category: hybrid
  description: Hybrid quantum fusion scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/031_hybrid_semantic_ignition/scenario.toml
---
{
  "category": "hybrid",
  "files": [],
  "scenario_id": "031_hybrid_semantic_ignition",
  "status": "validated"
}
