packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__033_md_attach_ignore_attachments_and_inline_embeds.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 033_md_attach_ignore_attachments_and_inline_embeds [markdown_attachments]: ignore attachments and inline embeds"
expression: result
info:
  id: 033_md_attach_ignore_attachments_and_inline_embeds
  name: ignore attachments and inline embeds
  category: markdown_attachments
  description: markdown_attachments scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/033_md_attach_ignore_attachments_and_inline_embeds/scenario.toml
---
{
  "category": "markdown_attachments",
  "files": [],
  "scenario_id": "033_md_attach_ignore_attachments_and_inline_embeds",
  "status": "validated"
}
