packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__035_md_attach_relative_and_anchor.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 035_md_attach_relative_and_anchor [markdown_attachments]: relative and anchor"
expression: result
info:
  id: 035_md_attach_relative_and_anchor
  name: relative and anchor
  category: markdown_attachments
  description: markdown_attachments scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/035_md_attach_relative_and_anchor/scenario.toml
---
{
  "category": "markdown_attachments",
  "files": [],
  "scenario_id": "035_md_attach_relative_and_anchor",
  "status": "validated"
}
